# solo-6600007

./: .gitignore  README.md
backend/: Cargo.toml  real_backend.py
backend/src/: database.rs  fingerprint.rs  main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AddToPlaylist.tsx  ArtistDetail.tsx  ArtistList.tsx  CompareRecorder.tsx  FailedSamples.tsx  OfflineDrafts.tsx  OnboardingGuide.tsx  PendingQueue.tsx  PlaylistManager.tsx  RecognitionHistory.tsx  Recorder.tsx  ReviewTasks.tsx  SongDetail.tsx  SongLibrary.tsx  SongUploader.tsx
frontend/src/store/: audio.ts
frontend/src/types/: index.ts
scripts/: generate_test_wav.js  mock_backend.js  package-lock.json  package.json  test_api_flow.js  verify_real_backend.sh
